bug: added listener to panel instead of arrow as it was hard to interact with on mobile.

--- a/feedme.css
+++ b/feedme.css
@@ -439,6 +439,7 @@ button.gm-ui-hover-effect span {
     background: rgba(255,255,255, 0.5);
     width: 18px;
     height: 18px;
+    cursor: pointer;
 }
 
 .nav-button {
